fix(graph): fixed off by one error with graph grid row spacing, plus storybook container styling

--- a/packages/demo/.storybook/preview.scss
+++ b/packages/demo/.storybook/preview.scss
@@ -23,16 +23,11 @@
 }
 
 #storybook-root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  box-sizing: border-box;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   font-family: 'JetBrains Mono', system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
