--- a/packages/demo/src/GitLog.stories.module.scss
+++ b/packages/demo/src/GitLog.stories.module.scss
@@ -1,6 +1,5 @@
 .container {
   padding: 20px;
-  min-height: 100vh;
   box-sizing: border-box;
 }
 
